# diwa-rewrite

./: .gitignore  Cargo.toml  Cross.toml
src/: convert_query.rs  data.rs  error.rs  lazy_queued.rs  lib.rs  main.rs  metadata.rs  stream_media_source.rs  utils.rs
src/api_integration/: spotify.rs  youtube.rs
src/commands/: _loop.rs  error.rs  help.rs  jeja.rs  join.rs  leave.rs  mod.rs  pause.rs  ping.rs  play.rs  queue.rs  register.rs  resume.rs  skip.rs  song.rs  stop.rs  utils.rs
src/scrapers/: jeja.rs  mod.rs  youtube.rs
