[package]
name = "diwa"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.6", features = ["builder", "cache", "client", "http", "model", "utils", "rustls_backend", "gateway", "voice", "rustls_backend", "collector"], default-features = false }
poise = { version = "0.5.5", features = ["collector"] }
songbird = { version = "0.3.2", features = ["driver", "builtin-queue"]}
dotenv = "0.15.0"
tokio = { version = "1.30.0", features = ["full"] }
google-youtube3 = "5.0.3+20230123"
rspotify = { version = "0.11.7", features = ["env-file", "client-ureq", "ureq-rustls-tls"], default-features = false }
thiserror = "1.0.44"
nom = "7.1.3"
reqwest = "0.11.18"
iso8601 = "0.6.1"
symphonia = "0.5.3"
serde_json = "1.0.104"
futures = "0.3.28"
rusty_ytdl = "0.6.6"
scraper = "0.18.1"
tts_rust = "0.3.5"

[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "*", features = ["vendored"] }